Fix various style and layout bugs

--- a/src/App.scss
+++ b/src/App.scss
@@ -14,12 +14,10 @@
 body, html {
   background-color: $colour-white;
   max-width: 100vw;
-  box-sizing: border-box;
 }
 
 .app-body {
   @include breakpoint(desktop) {
-    margin-left: 10%;
     max-width: 90%;
 }
   max-width: 75%;
@@ -33,6 +31,9 @@ body, html {
   margin-bottom: 0;
   margin-right: 17.5px;
   color: $colour-1;
+  border-bottom:  5px solid $colour-2;
+  border-left:  5px solid $colour-2;
+  padding-left: 5px;
 }
 
 .loader {
