--- a/src/index.scss
+++ b/src/index.scss
@@ -16,4 +16,5 @@ body {
   font-family: $font-stack;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  box-sizing: border-box;
 }
